Bug 355086 - Certificate Details: Show validity of user-ids
Summary: Certificate Details: Show validity of user-ids
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.2.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-09 14:37 UTC by Emanuel Schütze
Modified: 2017-12-07 12:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emanuel Schütze 2015-11-09 14:37:24 UTC
Moved from https://roundup.kolab.org/issue4199



Reproducible: Always
Comment 1 Andre Heinecke 2017-12-07 12:06:31 UTC
Git commit 3034c8d3a8df1bf7656c4d3038cce3371f8c3d8b by Andre Heinecke.
Committed on 07/12/2017 at 12:06.
Pushed by aheinecke into branch 'master'.

Improve "Status" display of userid signatures

Just printing the decimal number of the class is
way too technical. Now we have an icon and a simple word
and only show the class in the tooltip.

M  +27   -1    src/models/useridlistmodel.cpp
M  +46   -4    src/utils/formatting.cpp
M  +1    -0    src/utils/formatting.h

https://commits.kde.org/libkleo/3034c8d3a8df1bf7656c4d3038cce3371f8c3d8b