Improve "Status" display of userid signatures

Just printing the decimal number of the class is
way too technical. Now we have an icon and a simple word
and only show the class in the tooltip.

BUG: 355086